[FLINK-38766][table] Add support for `ALTER MATERIALIZED TABLE ADD` support
This closes #27302.